--- a/views/header-template.ejs
+++ b/views/header-template.ejs
@@ -19,10 +19,8 @@
 </head>
 
 <body>
-
-    <div class="banner">
-        banner runner
-    </div>
     <header>
-        header
+        <div class="upper-header-block">
+            
+        </div>
     </header>
