--- a/public/main.css
+++ b/public/main.css
@@ -78,6 +78,15 @@ html {
   width: 100%;
 }
 
+header {
+  width: 100%;
+}
+header .upper-header-block {
+  width: 100%;
+  height: 62px;
+  display: block;
+}
+
 body {
   width: 100%;
   background: lightgrey;
