--- a/public/main.scss
+++ b/public/main.scss
@@ -82,6 +82,18 @@ html {
     width: 100%;
 }
 
+//header css
+
+header {
+    width: 100%;
+
+    .upper-header-block {
+        width: 100%;
+        height: 62px;
+        display: block;
+    }
+}
+
 body {
     width: 100%;
     background: lightgrey;
