--- a/views/header-template.ejs
+++ b/views/header-template.ejs
@@ -20,7 +20,35 @@
 
 <body>
     <header>
-        <div class="upper-header-block">
-            
+        <div class="upper-header">
+            <div class="upper-header-block">
+                <a href="tel:+79524920727" class="btn-call">
+                    <svg class="phone-icon ">
+                        <use xlink:href="/main.svg#phone-svg"></use>
+                    </svg>
+                    <span>+7 (952) 492-07-27</span>
+                </a>
+                <div class="upper-header-block-btn">
+                    <div class="request-call">
+                        <span>Заказать звонок</span>
+                    </div>
+                    <a href="">
+                        Контакты
+                    </a>
+                    <a href="">
+                        О нас
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="bottom-header">
+            <div class="bottom-header-block">
+                <a href="/" class="bottom-header-block-btn-logo">
+                    <svg class="logo-svg ">
+                        <use xlink:href="/main.svg#logo-svg"></use>
+                    </svg>
+                </a>
+
+            </div>
         </div>
     </header>
