--- a/public/main.scss
+++ b/public/main.scss
@@ -82,18 +82,6 @@ html {
     width: 100%;
 }
 
-//header css
-
-header {
-    width: 100%;
-
-    .upper-header-block {
-        width: 100%;
-        height: 62px;
-        display: block;
-    }
-}
-
 body {
     width: 100%;
     background: lightgrey;
@@ -103,4 +91,117 @@ body {
 
 a {
     text-decoration: none;
+    color: black;
+
+    &:focus-visible {
+        outline: 0;
+    }
+}
+
+//header css
+
+header {
+    width: 100%;
+    background: white;
+
+    .upper-header {
+        width: 100%;
+        height: 64px;
+
+        .upper-header-block {
+            display: flex;
+            width: 80%;
+            height: 64px;
+            margin: auto;
+        
+
+            .btn-call {
+                display: flex;
+                width: 210px;
+                height: 64px;
+                
+                .phone-icon {
+                    width: 32px;
+                    height: 32px;
+                    margin: 18px 5px 18px 5px;
+                    transition: .2s;
+                    fill: grey;
+                }
+
+                span {
+                    vertical-align: middle;
+                    text-align: center;
+                    line-height: 64px;
+                    font-size: 20px;
+                    color: grey;
+                    transition: .2s;
+                }
+                &:hover {
+                    .phone-icon {
+                        fill: $primary-orange;
+                    }
+            
+                    span {
+                        color: $primary-orange;
+                    }
+            
+                }
+            }
+
+            .upper-header-block-btn {
+                display: flex;
+                width: calc(100% - 210px);
+                height: 64px;
+                line-height: 64px;
+
+                .request-call {
+                    margin-left: 20px;
+                    cursor: pointer;
+                    font-size: 14px;
+                    text-transform: uppercase;
+                    color: $primary-orange;
+                    transition: .2s;
+
+                    &:hover {
+                            color: grey;
+                    }
+                }
+
+                a {
+                    height: 64px;
+                    margin-left: 20px;
+                    font-size: 16px;
+                    color: grey;
+                    transition: .2s;
+
+                    &:hover {
+                        color: $primary-orange;
+                    }
+                }
+            }
+        }
+    }
+
+    .bottom-header{
+        width: 100%;
+        height: 128px;
+
+        .bottom-header-block {
+            display: flex;
+            width: 80%;
+            height: 128px;
+            margin: auto;
+
+            .bottom-header-block-btn-logo {
+                .logo-svg{
+                    width: 300px;
+                    height: 128px;
+                    fill: $primary-orange;
+                }
+            }
+        }
+    }
+    
+
+    
 }
