--- a/public/main.scss
+++ b/public/main.scss
@@ -86,7 +86,7 @@ body {
     width: 100%;
     background: lightgrey;
     text-align: center;
-    font-family: 'Lora', serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 a {
@@ -123,7 +123,7 @@ header {
                 .phone-icon {
                     width: 32px;
                     height: 32px;
-                    margin: 18px 5px 18px 5px;
+                    margin: 18px 0 18px 0;
                     transition: .2s;
                     fill: grey;
                 }
@@ -185,6 +185,7 @@ header {
     .bottom-header{
         width: 100%;
         height: 128px;
+        border-top: 1px solid whitesmoke;
 
         .bottom-header-block {
             display: flex;
@@ -194,9 +195,198 @@ header {
 
             .bottom-header-block-btn-logo {
                 .logo-svg{
-                    width: 300px;
+                    width: 250px;
                     height: 128px;
                     fill: $primary-orange;
+                }
+            }
+
+            .headerCatalogBtn{
+                display: flex;
+                width: 175px;
+                height: 50px;
+                line-height: 46px;
+                margin-left: 10px;
+                margin-top: 39px;
+                border: 2px solid $primary-orange;
+                border-radius: 10px;
+                background: white;
+                cursor: pointer;
+                transition: .2s;
+
+                .grid-svg {
+                    width: 46px;
+                    height: 46px;
+                    fill: rgba(0,0,0,0);
+                    stroke: $primary-orange;
+                    transition: .2s;
+                }
+
+                span {
+                    color: $primary-orange;
+                    font-weight: bold;
+                    text-transform: uppercase;
+                    font-size: 18px;
+                    transition: .2s;
+                }
+
+                .arrow-header-svg {
+                    width: 22px;
+                    height: 22px;
+                    margin: 12px;
+                    fill: $primary-orange;
+                    transition: .2s;
+                }
+
+                &:hover {
+                    background: $primary-orange;
+
+                    .grid-svg {
+                        stroke: white;
+                    }
+    
+                    span {
+                        color:white
+                    }
+    
+                    .arrow-header-svg {
+                        fill: white;
+                    }
+                }
+            }
+
+            .btnActiveCatalogHeader {
+                background: $primary-orange;
+
+                .grid-svg {
+                    fill: white;
+                    stroke: rgba(0,0,0,0);
+                }
+
+                span {
+                    color:white
+                }
+
+                .arrow-header-svg {
+                    fill: white;
+                    transform: rotate(180deg);
+                }
+
+                &:hover {
+                    .grid-svg {
+                        stroke: rgba(0,0,0,0);
+                    }
+                }
+            }
+
+            .href-bottom-header{
+                height: 50px;
+                text-align: center;
+                text-transform: uppercase;
+                font-size: 18px;
+                line-height: 50px;
+                margin-left: 20px;
+                margin-top: 39px;
+                transition: .2s;
+
+                &:hover {
+                    color: $primary-orange;
+                }
+            }
+
+            .inp-bottom-header {
+                display: flex;
+                width: calc(100% - 790px);
+                height: 50px;
+                border: 1px solid lightgrey;
+                border-radius: 10px;
+                margin-left: auto;
+                margin-top: 39px;
+                margin-right: 0;
+
+                input {
+                    border: 0;
+                    height: 50px;
+                    width: calc(100% - 50px);
+                    background: 0;
+                    border-radius: 10px;
+                    padding: 0;
+                    padding-left: 10px;
+
+                    &:focus-visible{
+                        outline: 0;
+                    }
+                }
+
+                button {
+                    background: 0;
+                    border: 0px;
+                    width: 50px;
+                    height: 48px;
+                    padding: 0;
+                    cursor: pointer;
+                    background: 0;
+                    border-top-right-radius: 10px;
+                    border-bottom-right-radius: 10px;
+                    transition: .2s;
+
+                    .search-svg-icon {
+                        width: 32px;
+                        height: 32px;
+                        margin: auto;
+                        fill: grey;
+                        transition: .2s;
+                    }
+
+                    &:hover {
+                        background: rgba(201, 201, 201, .7);
+
+                        .search-svg-icon{
+                            fill: $primary-orange;
+                        }
+                    }
+
+                    &:focus-visible{
+                        outline: 0;
+                    }
+                }
+            }
+
+            .liked-product-cart-bottom-header {
+                width: 50px;
+                height: 50px;
+                position: relative;
+                margin-top: 39px;
+                margin-left: 20px;
+
+                .like-cart-icon {
+                    width: 32px;
+                    height: 32px;
+                    cursor: pointer;
+                    margin: 9px;
+                    transition: .2s;
+
+                    &:hover {
+                        fill: $primary-orange;
+                    }
+                }
+
+                span {
+                    position: absolute;
+                    top: auto;
+                    bottom: 0;
+                    right: -10px;
+                    width: 20px;
+                    height: 20px;
+                    width: 18px;
+                    height: 17px;
+                    font-size: .8em;
+                    line-height: 17px;
+                    color: #fff;
+                    border-radius: 100%;
+                    text-align: center;
+                    box-shadow: none;
+                    background: $primary-orange;
                 }
             }
         }
