--- a/public/main.scss
+++ b/public/main.scss
@@ -403,7 +403,7 @@ a {
         width: 40px;
         height: 40px;
         margin: 12px;
-        transition: .2s;
+        transition: fill .2s;
         cursor: pointer;
 
         &:hover {
@@ -419,12 +419,13 @@ a {
             width: 300px;
             height: 40px;
             margin: 12px;
-            transition: .2s;
+            transition: width .2s;
+
+            &.active {
+                width: 0px !important;
+            }
         }
 
-        .logo-hide-btn-header-mobil{
-            width: 0px;
-        }
     }
     
 
@@ -436,14 +437,17 @@ a {
         margin-right: 0px;
         width: 64px;
         max-width: calc(100% - 152px);
-        transition: .3s;
+        transition: width .3s;
 
+        &.active {
+          width: 100%  !important;
+        }
 
         .search-svg-mobile-header{
             width: 40px;
             height: 40px;
             margin: 12px;
-            transition: .2s;
+            transition: fill .2s;
             cursor: pointer;
 
             &:hover {
@@ -458,8 +462,7 @@ a {
             border: 0px;
             padding: 0;
             
-            transition: .2s;
-
+            transition: width .2s;
             &:focus-visible{
                 outline: 0;
             }
@@ -475,7 +478,7 @@ a {
         width: 40px;
         height: 40px;
         margin: 12px;
-        transition: .2s;
+        transition: fill .2s;
         cursor: pointer;
         align-self: flex-end;
 
