--- a/public/main.scss
+++ b/public/main.scss
@@ -486,6 +486,97 @@ a {
     }
 }
 
+.block-screen {
+    opacity: 0;
+    pointer-events: none;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(150, 150, 150, .7);
+
+    &.active {
+        opacity: 1;
+        pointer-events: all;
+    }
+}
+
+.menu-slider {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: -100%;
+    width: 300px;
+    background: white;
+    overflow: hidden;
+    transition: left .2s;
+
+    &.active {
+        left: 0;
+    }
+
+    &-wrap {
+        display:flex;
+        width: fit-content;
+        
+    
+        .page{
+            width: 300px; 
+
+            .back-btn-menu{
+                display: flex;
+                width: 100%;
+                height: 64px;
+                cursor: pointer;
+
+                .arrow-back-svg-icon{
+                    width: 24px;
+                    height: 24px;
+                    margin: 20px;
+                    transform: rotate(-90deg);
+                    transition: .2s;
+                }
+
+                span{
+                    line-height: 64px;
+                    transition: .2s;
+                }
+
+                &:hover {
+                    .arrow-back-svg-icon{
+                        fill: $primary-orange;
+                    }
+
+                    span{
+                        color: $primary-orange;
+                    }
+                }
+            }
+        }
+    
+
+        .catalog{
+            display: flex;
+            width: 100%;
+            height: 64px;
+            line-height: 64px;
+
+            span{
+                font-size: 18px;
+                
+            }
+
+            .more-catalog-svg{
+                display: inline-block;
+                width: 40px;
+                height: 40px;
+                margin: 12px;
+            }
+        }
+    }
+}
+
 @media screen and (max-width: 1200px){
     .fullscreen-header {
         .upper-header {
