burger menu done

--- a/views/menu-slider.ejs
+++ b/views/menu-slider.ejs
@@ -8,22 +8,60 @@
                 </svg>
                 <span>Назад</span>
             </div>
-            <div class="catalog">
-                <span>Каталог1</span>
-                <svg class="more-catalog-svg" onclick="showSearchInp()">
+            <div class="catalog" onclick="scrollPageRight(this)">
+                <span>Каталог</span>
+                <svg class="more-catalog-svg">
                     <use xlink:href="/main.svg#arrow-catalog-svg"></use>
                 </svg>
             </div>
-            .
+            <a href="">
+                <div class="btn-menu-a">
+                    <span>Акции</span>
+                </div>
+            </a>
+            <a href="">
+                <div class="btn-menu-a">
+                    <span>Бренды</span>
+                </div>
+            </a>
+            <div class="catalog" onclick="scrollPageRight(this)">
+                <span>Покупателям</span>
+                <svg class="more-catalog-svg">
+                    <use xlink:href="/main.svg#arrow-catalog-svg"></use>
+                </svg>
+            </div>
+            <h4>Контактная информация</h4>
+            <a href="tel:+79524920727">
+                <div class="contact-menu-btn">
+                    <svg class="phone-svg-menu">
+                        <use xlink:href="/main.svg#phone-svg"></use>
+                    </svg>
+                    <span>+7 (952) 492-07-27</span>
+                </div>
+            </a>
+            <a href="geo: 52.350141, 35.348603">
+                <div class="contact-menu-btn">
+                    <svg class="phone-svg-menu">
+                        <use xlink:href="/main.svg#map-marker-svg"></use>
+                    </svg>
+                    <span>Воинов-Интернационалистов 6</span>
+                </div>
+            </a>
+            <a href="https://vk.com/killmusiccustom">
+                <svg class="vk-svg-menu">
+                    <use xlink:href="/main.svg#vk-svg"></use>
+                </svg>
+            </a>
         </div>
         <div class="second-layer page">        
-            <div class="back-btn-menu" onclick="menuSlider()">
+            <div class="back-btn-menu" onclick="scrollPageLeft(this)">
                 <svg class="arrow-back-svg-icon" onclick="showSearchInp()">
                     <use xlink:href="/main.svg#arrow-back-svg"></use>
                 </svg>
                 <span>Назад</span>
             </div>
-            <div class="catalog">
+            <h3></h3>
+            <div class="catalog" onclick="scrollPageRight(this)">
                 <span>Каталог2</span>
                 <svg class="more-catalog-svg" onclick="showSearchInp()">
                     <use xlink:href="/main.svg#arrow-catalog-svg"></use>
