--- a/public/main.css
+++ b/public/main.css
@@ -347,6 +347,7 @@ a:focus-visible {
   width: 40px;
   height: 40px;
   margin: 12px;
+  fill: black;
   transition: fill 0.2s;
   cursor: pointer;
 }
@@ -447,6 +448,7 @@ a:focus-visible {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
+  transition: margin-left 0.3s;
 }
 .menu-slider-wrap .page {
   width: 300px;
@@ -461,6 +463,7 @@ a:focus-visible {
   width: 24px;
   height: 24px;
   margin: 20px;
+  margin-left: 12px;
   transform: rotate(-90deg);
   transition: 0.2s;
 }
@@ -474,20 +477,86 @@ a:focus-visible {
 .menu-slider-wrap .page .back-btn-menu:hover span {
   color: #FF6600;
 }
-.menu-slider-wrap .catalog {
+.menu-slider-wrap .page .catalog {
   display: flex;
   width: 100%;
   height: 64px;
   line-height: 64px;
+  justify-content: space-between;
+  transition: color 0.2s;
+  cursor: pointer;
 }
-.menu-slider-wrap .catalog span {
+.menu-slider-wrap .page .catalog span {
   font-size: 18px;
+  margin-left: 12px;
 }
-.menu-slider-wrap .catalog .more-catalog-svg {
+.menu-slider-wrap .page .catalog .more-catalog-svg {
   display: inline-block;
+  width: 20px;
+  height: 20px;
+  margin: 22px;
+  transform: rotate(90deg);
+  transition: fill 0.2s;
+}
+.menu-slider-wrap .page .catalog:hover {
+  color: #FF6600;
+  fill: #FF6600;
+}
+.menu-slider-wrap .page h3 {
+  text-align: left;
+  margin-left: 12px;
+  color: #FF6600;
+  width: calc(100% - 12px);
+  height: 64px;
+  line-height: 64px;
+}
+.menu-slider-wrap .page h4 {
+  text-align: left;
+  margin: 12px;
+  width: calc(100% - 24px);
+}
+.menu-slider-wrap .page a {
+  fill: #5281b8;
+}
+.menu-slider-wrap .page a .btn-menu-a {
+  width: calc(100% - 12px);
+  height: 64px;
+  line-height: 64px;
+  text-align: left;
+  font-size: 18px;
+  padding-left: 12px;
+  transition: color 0.2s;
+}
+.menu-slider-wrap .page a .btn-menu-a:hover {
+  color: #FF6600;
+}
+.menu-slider-wrap .page a .contact-menu-btn {
+  display: flex;
+  width: 100%;
+  height: 64px;
+  line-height: 64px;
+  transition: color 0.2s;
+  font-size: 14px;
+  fill: black;
+}
+.menu-slider-wrap .page a .contact-menu-btn .phone-svg-menu {
+  width: 24px;
+  height: 24px;
+  margin: 20px;
+  margin-left: 12px;
+  transition: fill 0.2s;
+}
+.menu-slider-wrap .page a .contact-menu-btn:hover {
+  color: #FF6600;
+  fill: #FF6600;
+}
+.menu-slider-wrap .page a .vk-svg-menu {
   width: 40px;
   height: 40px;
-  margin: 12px;
+  transition: fill 0.2s;
+}
+.menu-slider-wrap .page a:hover {
+  fill: rgba(82, 129, 184, 0.7);
 }
 
 @media screen and (max-width: 1200px) {
